--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.WeatherApp" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.WeatherApp" parent="android:Theme.Material.Light.DarkActionBar">
+        <item name="android:colorPrimary">@color/light_blue_2</item>
+        <item name="android:text">@string/app_name</item>
+    </style>
 </resources>
